# Keymoji

./: .gitignore  README.md  analyzeAllPhotos  contributors.txt  giveMeEmoji.py
KeyMoji/: .gitignore  README.md
KeyMoji/app/: build.gradle
KeyMoji/app/src/main/: AndroidManifest.xml  jniLibs
KeyMoji/app/src/main/assets/trainingData/: TrainingData.csv  emotions.csv  happy3.csv
KeyMoji/app/src/main/cpp/: data.cpp  native-lib.cpp
KeyMoji/app/src/main/java/AndroidAuxilary/: AssetCopier.java  Emoji.java  Inflater.java  ViewAccessor.java  Wrapper.java
KeyMoji/app/src/main/res/drawable/: rect.xml
KeyMoji/app/src/main/res/layout/: activity_main.xml  activity_open.xml  keyboard.xml  preview.xml
KeyMoji/app/src/main/res/values/: EmojisUnicode.xml  colors.xml  dimens.xml  keycodes.xml  strings.xml
KeyMoji/app/src/main/res/xml/: keyboard_popup_template.xml  method.xml  numbers.xml  querty_hebrew.xml  qwerty.xml  symbols.xml
KeyMoji/app/src/main/res/xml-keyssoft/: qwerty.xml
KeyMoji/gradle/wrapper/: gradle-wrapper.properties
old_work/: FeatureExtraction.cpp
opencv_native_androidstudio/app/: CMakeLists.txt
opencv_native_androidstudio/app/src/main/: AndroidManifest.xml
opencv_native_androidstudio/app/src/main/cpp/dlib/: CMakeLists.txt
opencv_native_androidstudio/app/src/main/cpp/dlib/include/dlib/: set_utils.h
opencv_native_androidstudio/app/src/main/cpp/dlib/include/dlib/conditioning_class/: conditioning_class_kernel_2.h  conditioning_class_kernel_4.h
opencv_native_androidstudio/app/src/main/cpp/dlib/include/dlib/general_hash/: general_hash.h
opencv_native_androidstudio/app/src/main/cpp/dlib/include/dlib/gui_widgets/: canvas_drawing_abstract.h
opencv_native_androidstudio/app/src/main/cpp/dlib/include/dlib/matrix/lapack/: fortran_id.h  geev.h  getrf.h
opencv_native_androidstudio/app/src/main/cpp/dlib/include/dlib/optimization/: optimization_solve_qp_using_smo.h
opencv_native_androidstudio/app/src/main/cpp/dlib/include/dlib/sockets/: sockets_kernel_2.h
opencv_native_androidstudio/app/src/main/cpp/dlib/include/dlib/test/: hash_map.cpp  hash_set.cpp  md5.cpp  optimization_test_functions.cpp
opencv_native_androidstudio/app/src/main/cpp/dlib/include/dlib/threads/: rsignaler_extension_abstract.h
(+42 files in other folders)
